# fastapi-ddd

./: .env.example  README.md  docker-compose.yml  main.py  pyproject.toml
src/fastapi_ddd/: cli.py  main.py
src/fastapi_ddd/core/: api_router.py  config.py  containers.py  database.py  logging.py  permissions.py  security.py  transaction.py
src/fastapi_ddd/core/base/: base_model.py  base_repository.py  base_router.py  base_service.py
src/fastapi_ddd/core/events/: __init__.py  base.py  bootstrap.py  contracts.py  event_bus.py
src/fastapi_ddd/domains/authentication/: container_registration.py  dependencies.py  events.py  models.py  permissions.py  repositories.py  routers.py  schemas.py  seeders.py  services.py
src/fastapi_ddd/domains/authentication/alembic/: env.py
src/fastapi_ddd/domains/authentication/alembic/versions/: 01ef9ad2281c_update_authentication_models.py  74007514cd17_update_authentication_models.py  7ef149d83c3d_update_authentication_models.py  a494dcda0a5b_update_authentication_models.py
src/fastapi_ddd/domains/authorization/: container_registration.py  event_handlers.py  models.py  repositories.py  routers.py  schemas.py  seeders.py  services.py
src/fastapi_ddd/domains/authorization/alembic/: env.py
src/fastapi_ddd/domains/authorization/alembic/versions/: e1286d5aad60_update_authorization_models.py
src/fastapi_ddd/domains/user/: alembic.ini  models.py
src/fastapi_ddd/domains/user/alembic/: env.py
src/fastapi_ddd/domains/user/alembic/versions/: 1f83dc8b2196_update_user_models.py
src/fastapi_ddd/infrastructure/alembic/: env.py
