[project]
name = "fastapi_ddd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.120.0",
    "ruff>=0.14.2",
    "sqlmodel>=0.0.27",
]
[project.scripts]
cli = "fastapi_ddd.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
