[project]
name = "fastapi_ddd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
    "fastapi-pagination>=0.14.3",
    "fastapi[standard]>=0.120.0",
    "loguru>=0.7.3",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "ruff>=0.14.2",
    "sqlmodel>=0.0.27",
]
[project.scripts]
cli = "fastapi_ddd.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
